Getting too disorganized
need to try to separate better

--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
 <title>Hamburger Menu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/hamstyle.css">
 </head>
 <body>
 
-<div class="menu" id="mbox">
-  <span class="line" id="topLine"></span>
-  <span class="line" id="middleLine"></span>
-  <span class="line" id="bottomLine"></span>
-</div>
 
 
 
-
+<script src="js/hamburger.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
